SERVER-72094 fix findCmd checks the bool value of an optional incorrectly